# daw2logic

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/actions/setup-ccache/: action.yml
.github/workflows/: release.yml  test.yml  wasm-pages.yml
daw2logic/: __init__.py  audio.py  aupreset.py  cli.py  colors.py  colors_logic.py  convert.py  eq.py  eq_logic.py  flatten.py  ir.py  logicx_channels.py  mixer.py  mixer_logic.py  parser.py  plugins.py  time.py  track_order.py  transport_logic.py  wasm_api.py
daw2logic/fixtures/channel_eq/: ncua_2128_patches.json
docs/: AU_EMBEDDING.md  WASM.md
scripts/: build_cli.sh  build_wasi_zlib.sh  build_wasm.sh  cli_entry.py  patch_nuitka_wasi.py  serve_web.sh  setup_dev.sh
scripts/macos/: capture_mixer_fixture.sh  prepare_color_re_capture.sh  prepare_eq_re_capture.sh  prepare_mixer_re_captures.sh  prepare_volume_re_captures.sh  prepare_volume_sweep_capture.sh  validate_au_sidecar.sh  validate_mixer_in_logic.sh
scripts/patches/: logicx-wasi-seeds.patch
scripts/re/: README.md
tests/: conftest.py  test_audio_warp.py  test_cli.py  test_colors.py  test_convert.py  test_eq.py  test_mixer.py  test_parser.py  test_plugins.py  test_time.py  test_track_order.py  test_wasm_api.py
tests/fixtures/: bitwig_au.dawproject  bitwig_extended.dawproject  bitwig_interleaved.dawproject  bitwig_mixer.dawproject  bitwig_simple.dawproject  build_bitwig_simple.py
tools/: ocua_mixer_re.py  projectdata_re.py
wasm/: main.py
web/: app.js  index.html  styles.css
web/wasm/: .gitkeep
(+9 files in other folders)
